# webapp

./: README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
backend/: .pre-commit-config.yaml  __main__.py  conftest.py  gunicorn_runner.py  settings.py
backend/db/: base.py  utils.py
backend/db/dao/: dummy_dao.py
backend/db/migrations/: env.py
backend/db/models/: dummy_model.py  users.py
backend/web/: application.py  lifetime.py
backend/web/api/: router.py
backend/web/api/dummy/: __init__.py  views.py
backend/web/api/echo/: __init__.py
backend/web/api/monitoring/: __init__.py
backend/web/api/redis/: __init__.py  views.py
backend/web/api/users/: __init__.py  views.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml
k8s_web_app/k8s_web_app/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
k8s_web_app/k8s_web_app/db/models/: __init__.py  dummy_model.py
k8s_web_app/k8s_web_app/services/: __init__.py
k8s_web_app/k8s_web_app/services/redis/: lifetime.py
k8s_web_app/k8s_web_app/tests/: __init__.py  test_dummy.py
k8s_web_app/k8s_web_app/web/: __init__.py  application.py
k8s_web_app/k8s_web_app/web/api/: __init__.py
k8s_web_app/k8s_web_app/web/api/echo/: views.py
k8s_web_app/k8s_web_app/web/api/redis/: __init__.py
